# twitter_clone

./: .gitignore  pyproject.toml
authentication/: urls.py  views.py
notification/: models.py  urls.py  views.py
notification/migrations/: 0001_initial.py
tweet/: forms.py  models.py  urls.py  views.py
tweet/migrations/: 0001_initial.py
twitterclone/: settings.py  urls.py
twitterclone/templates/: basetemp.html  home.html  login.html  notification.html  profile.html  signup.html  tweetdetail.html  tweetform.html
twitteruser/: forms.py  models.py  urls.py  views.py
twitteruser/migrations/: 0001_initial.py
